Use new query interface from server
